--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,11 @@ body {
     font-family: "Open Sans", sans-serif;
     color: var(--text-color);
     text-align: center;
+    background: no-repeat center url('../bg.jpg');
+
     z-index: 999;
+    width: 100%;
+    height: 100vw;
 }
 
 .canvas-container {
@@ -63,10 +67,7 @@ body {
     z-index: 3;
 }
 
-.more-content {
-    height: 500vh;
-    width: 100vw;
-}
+
 
 .text-container {
     display: flex;
